# movie-rating-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a541e3e8d9d_initial.py  0b7195743eb2_initial_migration.py  2ac0c55ab98a_add_description_to_movies.py  799627281d67_initial_migration.py
app/: logging_config.py  main.py
app/controllers/: __init__.py  director_controller.py  genre_controller.py  movie_controller.py
app/db/: database.py
app/exceptions/: __init__.py  custom_exceptions.py  init.py
app/models/: __init__.py  director.py  genre.py  movie.py  rating.py
app/repositories/: base_repository.py  director_repository.py  genre_repository.py  movie_repository.py  rating_repository.py
app/schemas/request/: director_schema.py  genre_schema.py  movie_schema.py  rating_schema.py
app/schemas/response/: base_schema.py  director_schema.py  genre_schema.py  movie_schema.py  rating_schema.py
app/services/: director_service.py  genre_service.py  movie_service.py  rating_service.py
scripts/: seed.py  seed_check.py  seeddb.sql  seeddb_fixed.sql
