[tool.poetry]
name = "movie-rating-system"
version = "0.1.0"
description = "Backend system for movie management and rating"
authors = ["mohamadhoseinsamadi <msmdy7194@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.2"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
pandas = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.26.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
